--- a/app/views/heartbeats/index.html.erb
+++ b/app/views/heartbeats/index.html.erb
@@ -4,11 +4,11 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Requests</h1>
-    <%= link_to 'New request', new_request_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl">Heartbeats</h1>
+    <%= link_to 'New heartbeat', new_server_heartbeat_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="requests" class="min-w-full">
-    <%= render @requests %>
+  <div id="heartbeats" class="min-w-full">
+    <%= render @heartbeats %>
   </div>
 </div>
