--- a/app/views/servers/_server.html.erb
+++ b/app/views/servers/_server.html.erb
@@ -8,9 +8,10 @@
     <%= link_to "Show this server", server, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to 'Edit this server', edit_server_path(server), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
-  <% end %>
-  <h3 class="text-lg font-bold">Requests</h3>
+  <% else %>
+    <h3 class="text-lg font-bold">Requests</h3>
     <div>
-      <%= render server.requests %>
+      <%= render server.heartbeats %>
     </div>
+  <% end %>
 </div>
