--- a/app/views/servers/_server.html.erb
+++ b/app/views/servers/_server.html.erb
@@ -10,7 +10,8 @@
     <hr class="mt-6">
   <% else %>
     <h3 class="text-lg font-bold">Requests</h3>
-    <div>
+    <div id="heartbeats">
+      <%= turbo_stream_from server %>
       <%= render server.heartbeats %>
     </div>
   <% end %>
