--- a/app/views/heartbeats/index.html.erb
+++ b/app/views/heartbeats/index.html.erb
@@ -1,14 +1,14 @@
 <div class="w-full">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Heartbeats</h1>
-    <%= link_to 'New heartbeat', new_server_heartbeat_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  <div class="flex items-center justify-between">
+    <h1 class="text-4xl font-bold">Heartbeats</h1>
   </div>
 
   <div id="heartbeats" class="min-w-full">
     <%= render @heartbeats %>
   </div>
+  <%= link_to "Back to server", server_path(@server), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
