--- a/app/views/heartbeats/_heartbeat.html.erb
+++ b/app/views/heartbeats/_heartbeat.html.erb
@@ -4,6 +4,9 @@
   <% if heartbeat.status_message %>
     <p><%= heartbeat.status_message %></p>
   <% end %>
+  <% if heartbeat.response_time %>
+    <p>Response in <span><%= distance_of_time_in_words(heartbeat.request_time, heartbeat.response_time)%></span></p>
+  <% end %>
   <% if true %>
     <% # TODO: Better solution for action_name check since turbo stream is coming in as not a show action, but rendering on server page does on load %>
     <% if action_name != "xxx" %>
