Add basic organisations

--- a/app/views/heartbeats/_heartbeat.html.erb
+++ b/app/views/heartbeats/_heartbeat.html.erb
@@ -10,7 +10,7 @@
   <% if true %>
     <% # TODO: Better solution for action_name check since turbo stream is coming in as not a show action, but rendering on server page does on load %>
     <% if action_name != "xxx" %>
-      <%= link_to "Show this heartbeat", server_heartbeat_path(heartbeat.server, heartbeat), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= link_to "Show this heartbeat", organisation_server_heartbeat_path(organisation, server, heartbeat), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       <hr class="mt-6">
     <% end %>
   <% end %>
