--- a/app/views/servers/index.html.erb
+++ b/app/views/servers/index.html.erb
@@ -5,7 +5,8 @@
 
   <div class="flex items-center justify-between">
     <h1 class="text-4xl font-bold">Servers</h1>
-    <%= link_to 'New server', new_server_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to 'Back to organisations', organisations_path, class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium"%>
+    <%= link_to 'New server', new_organisation_server_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="servers" class="min-w-full">
