--- a/app/views/heartbeats/show.html.erb
+++ b/app/views/heartbeats/show.html.erb
@@ -4,11 +4,8 @@
       <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
     <% end %>
 
-    <%= render @heartbeat %>
+    <%= render @heartbeat, server: @server, organisation: @organisation %>
 
-    <div class="inline-block ml-2">
-      <%= button_to 'Destroy this heartbeat', server_heartbeat_path(@server, @heartbeat), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
-    <%= link_to 'Back to server', server_path(@server), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Back to server', organisation_server_path(@organisation, @server), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
