--- a/app/views/servers/_server.html.erb
+++ b/app/views/servers/_server.html.erb
@@ -1,14 +1,8 @@
 <div id="<%= dom_id server %>">
-  <%= render 'server_header', server: server %>
+  <%= render 'servers/server_header', server: server %>
+    <%= link_to "Show this server", organisation_server_path(@organisation, server), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   <% if action_name != "show" %>
-    <%= link_to "Show this server", server, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this server', edit_server_path(server), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, server), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
-  <% else %>
-    <h3 class="text-lg font-bold">Requests</h3>
-    <div id="heartbeats">
-      <%= turbo_stream_from server %>
-      <%= render server.heartbeats.order(id: :desc) %>
-    </div>
   <% end %>
 </div>
