--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <% if user_signed_in? %>
+      <p>Signed in as <%= current_user.email %></p>
+      <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
+    <% else %>
+      <%= link_to "Sign in", new_user_session_path %>
+      <%= link_to "Sign up", new_user_registration_path %>
+    <% end %>
+    <main class="container flex px-5 mx-auto mt-28">
       <%= yield %>
     </main>
   </body>
