--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -1,11 +1,19 @@
 <div class="w-full mx-auto justify-left md:w-2/3">
   <div class="mx-auto">
+    <%= turbo_stream_from @organisation %>
     <% if notice.present? %>
       <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
     <% end %>
 
     <%= render @organisation %>
 
+
+
+    <div id="users">
+      <%= render @organisation.users %>
+    </div>
+
+    <%= link_to 'Add a member', new_organisation_organisations_user_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"  %>
     <%= link_to 'Edit this organisation', edit_organisation_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <div class="inline-block ml-2">
       <%= button_to 'Destroy this organisation', organisation_path(@organisation), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
