--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,4 @@
 <div id="<%= dom_id(user) %>">
   <p><%= user.email %></p>
+  <%= button_to "Remove this user", organisation_organisations_user_path(organisation, user), method: :delete, params: {email: user.email, user_id: user.id} %>
 </div>
