--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,27 @@
       <%= link_to "Sign in", new_user_session_path %>
       <%= link_to "Sign up", new_user_registration_path %>
     <% end %>
-    <main class="container flex px-5 mx-auto mt-28">
-      <%= yield %>
-    </main>
+    <div class="relative min-h-screen md:flex" data-controller="hello">
+
+      <div id="mobile-menu-bar" class="flex justify-between text-gray-100 bg-gray-800 md:hidden">
+        <p>Something</p>
+        <button class="p-4 focus:bg-gray-700" data-action="click->hello#toggleSidebar">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+      <div id="sidebar" tabindex=0 data-hello-target="sidebar" class="absolute inset-y-0 left-0 w-64 px-2 text-white bg-blue-600 transform ease-in-out -translate-x-full transition duration-200 md:translate-x-0 md:relative">
+        Logo
+        <nav class="flex flex-col font-bold">
+          <%= link_to 'Home', dashboard_index_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" %>
+          <%= link_to 'Organisations', organisations_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
+          <%= link_to 'New organisation', new_organisation_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
+        </nav>
+      </div>
+      <main class="container flex px-5 mx-auto mt-28">
+        <%= yield %>
+      </main>
+    </div>
   </body>
 </html>
