--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
           <%= link_to 'Home', dashboard_index_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" %>
           <%= link_to 'Organisations', organisations_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
           <%= link_to 'New organisation', new_organisation_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
+          <%= link_to 'Account', user_path(current_user), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"   %>
         </nav>
       </div>
       <main class="container flex px-5 mx-auto mt-28">
