--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,4 +1,7 @@
 <div>
+    <% if notice.present? %>
+      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+    <% end %>
   <h1 class="text-4xl font-bold">Dashboard#show</h1>
   <p>Find me in app/views/dashboard/show.html.erb</p>
   <%= render @organisations %>
