--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,9 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <p>Signed in as <%= current_user.email %></p>
-      <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
-    <% else %>
-      <%= link_to "Sign in", new_user_session_path %>
-      <%= link_to "Sign up", new_user_registration_path %>
-    <% end %>
     <div class="relative min-h-screen md:flex" data-controller="hello">
 
-      <div id="mobile-menu-bar" class="flex justify-between text-gray-100 bg-gray-800 md:hidden">
+      <div id="mobile-menu-bar" class="flex justify-between text-white bg-blue-600 md:hidden">
         <p>Something</p>
         <button class="p-4 focus:bg-gray-700" data-action="click->hello#toggleSidebar">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -35,7 +28,14 @@
           <%= link_to 'Home', dashboard_index_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" %>
           <%= link_to 'Organisations', organisations_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
           <%= link_to 'New organisation', new_organisation_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"  %>
+    <% if user_signed_in? %>
           <%= link_to 'Account', user_path(current_user), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"   %>
+      <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "flex-1 block text-left w-full px-4 py-1 hover:bg-red-400 rounded transition duration-200 font-bold"%>
+      <p class="px-4 py-1 font-normal rounded">Signed in as <%= current_user.email %></p>
+    <% else %>
+      <%= link_to "Sign in", new_user_session_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"    %>
+      <%= link_to "Sign up", new_user_registration_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200"    %>
+    <% end %>
         </nav>
       </div>
       <main class="container flex px-5 mx-auto mt-28">
