--- a/app/views/organisations/new.html.erb
+++ b/app/views/organisations/new.html.erb
@@ -1,4 +1,7 @@
 <div class="mx-auto md:w-2/3 w-full">
+  <% if notice.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+  <% end %>
   <h1 class="font-bold text-4xl">New organisation</h1>
 
   <%= render "form", organisation: @organisation %>
