--- a/app/views/organisations_users/new.html.erb
+++ b/app/views/organisations_users/new.html.erb
@@ -1,7 +1,10 @@
 <div class="w-full mx-auto md:w-2/3">
-<% if alert.present? %>
-  <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
-<% end %>
+  <% if notice.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+  <% end %>
+  <% if alert.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
+  <% end %>
   <h1 class="text-4xl font-bold">New organisations user</h1>
 
   <%= render "form", organisations_user: @organisations_user, organisation: @organisation %>
