--- a/app/views/servers/new.html.erb
+++ b/app/views/servers/new.html.erb
@@ -1,4 +1,7 @@
 <div class="w-full mx-auto md:w-2/3">
+    <% if notice.present? %>
+      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+    <% end %>
   <h1 class="text-4xl font-bold">New server</h1>
 
   <%= render "form", server: @server %>
