--- a/app/views/servers/_server_header.html.erb
+++ b/app/views/servers/_server_header.html.erb
@@ -1,9 +1,9 @@
-<% any_stats_code_errors = false %>
-<% server.heartbeats.order(id: :desc).limit(1).each do |heartbeat| %>
-  <% if heartbeat.status_code == "0" %>
-    <% any_stats_code_errors = true %>
-    <% break %>
-  <% end %>
+<% status_indicator_color = "bg-green-500" %>
+<% if server.recent_failure? %>
+  <% status_indicator_color = "bg-orange-500" %>
+<% end %>
+<% if server.last_request_failed? %>
+  <% status_indicator_color = "bg-red-500" %>
 <% end %>
 
 <div id="<%= dom_id(server) + "-server-header" %>"class="">
@@ -12,9 +12,5 @@
   <strong class="block mb-1 font-medium">Hostname:</strong>
   <%= server.hostname %>
   </p>
-  <% if any_stats_code_errors %>
-    <div class="w-4 h-4 bg-red-500 rounded-full"></div>
-  <% else %>
-    <div class="w-4 h-4 bg-green-500 rounded-full"></div>
-  <% end %>
+  <div class="w-4 h-4 <%= status_indicator_color %> rounded-full">
 </div>
