--- a/app/views/heartbeats/index.html.erb
+++ b/app/views/heartbeats/index.html.erb
@@ -2,6 +2,9 @@
   <% if notice.present? %>
     <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
   <% end %>
+  <% if alert.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
+  <% end %>
 
   <div class="flex items-center justify-between">
     <h1 class="text-4xl font-bold">Heartbeats</h1>
