--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -3,6 +3,9 @@
     <% if notice.present? %>
       <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
     <% end %>
+    <% if alert.present? %>
+      <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
+    <% end %>
 
     <%= render @server, organisation: @organisation %>
 
