Add seperate protocol for servers for http and https

--- a/app/views/servers/_form.html.erb
+++ b/app/views/servers/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="my-5">
+    <%= form.label :protocol %>
+    <%= form.select :protocol, Server::PROTOCOLS.map {|p| [p,p] } %>
+  </div>
+
+  <div class="my-5">
     <%= form.label :hostname %>
     <%= form.text_field :hostname, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
