Move sidebar to shared/ and add problem servers to org

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -9,6 +9,7 @@
     <% end %>
 
     <%= render @organisation %>
+    <%= render @organisation.servers_with_immediate_problem, organisation: @organisation  %>
 
 
 
