--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,84 +12,10 @@
   </head>
 
   <body>
-    <div class="relative min-h-screen md:flex" data-controller="hello">
-
-      <div id="mobile-menu-bar" class="flex justify-between text-white bg-blue-600 md:hidden">
-        <p>Something</p>
-        <button class="p-4 focus:bg-gray-700" data-action="click->hello#toggleSidebar">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
-      <div id="sidebar" tabindex=0 data-hello-target="sidebar" class="absolute inset-y-0 left-0 w-64 px-2 text-white bg-blue-600 transform ease-in-out -translate-x-full transition duration-200 md:translate-x-0 md:relative">
-        Logo
-        <nav class="flex flex-col font-bold">
-          <%= link_to dashboard_index_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-            <div class="flex">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-              </svg>
-              <p class="px-2">Home</p>
-            </div>
-          <% end %>
-          <%= link_to organisations_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-            <div class="flex">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-              </svg>
-              <p class="pl-2">Organisations</p>
-            </div>
-          <% end %>
-          <%= link_to new_organisation_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-            <div class="flex">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-              <p class="pl-2">New organisation</p>
-            </div>
-          <% end %>
-    <% if user_signed_in? %>
-          <%= link_to user_path(current_user), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-            <div class="flex">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-              </svg>
-              <p class="px-2">Account</p>
-            </div>
-          <% end %>
-      <%= button_to destroy_user_session_path, method: :delete, data: { turbo: false }, class: "flex-1 block text-left w-full px-4 py-1 hover:bg-red-400 rounded transition duration-200 font-bold" do %>
-        <div class="flex">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-          </svg>
-          <p class="px-2">Log out</p>
-        </div>
-      <% end %>
-      <p class="px-4 py-1 font-normal rounded">Signed in as <%= current_user.email %></p>
-    <% else %>
-      <%= link_to new_user_session_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-        <div class="flex">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1" />
-          </svg>
-          <p class="px-2">Sign in</p>
-        </div>
-      <% end %>
-      <%= link_to new_user_registration_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
-        <div class="flex">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
-          </svg>
-          <p class="px-2">Sign up</p>
-        </div>
-      <% end %>
-    <% end %>
-        </nav>
-      </div>
-      <main class="container flex px-5 mx-auto mt-28">
-        <%= yield %>
-      </main>
+    <%= render "shared/sidebar" %>
+    <main class="container flex px-5 mx-auto mt-28">
+      <%= yield %>
+    </main>
     </div>
   </body>
 </html>
