--- a/app/views/servers/_server_header.html.erb
+++ b/app/views/servers/_server_header.html.erb
@@ -12,5 +12,5 @@
   <strong class="block mb-1 font-medium">Hostname:</strong>
   <%= server.protocol %><%= server.hostname %>
   </p>
-  <div class="w-4 h-4 <%= status_indicator_color %> rounded-full"></div>
+  <div class="w-4 h-4 <%= status_indicator_color %> rounded-full border border-black"></div>
 </div>
