--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -53,7 +53,26 @@
         <% end %>
         <p class="px-4 py-1 font-normal rounded">Signed in as <%= current_user.email %></p>
         <hr>
-        <p>Add org section here with org specifics like problematic servers</p>
+        <%# TODO: current_organisation triggers if on the new page %>
+        <% if current_organisation %>
+          <p><%= current_organisation.name %></p>
+          <%= link_to organisation_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+</svg>
+              <p class="pl-2">Organisation home</p>
+            </div>
+          <% end %>
+          <%= link_to organisation_problems_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              <p class="pl-2">Immediate problems</p>
+            </div>
+          <% end %>
+        <% end %>
       <% else %>
         <%= link_to new_user_session_path, class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
           <div class="flex">
