--- a/app/views/organisations/problems.html.erb
+++ b/app/views/organisations/problems.html.erb
@@ -1,7 +1,8 @@
 <div class="w-full mx-auto justify-left md:w-2/3">
-  <h1 class="text-xl font-bold">Servers with immediate problems</h1>
-  <div id="problem_servers" class="flex flex-wrap py-4 pl-4 bg-red-200 rounded-lg gap-4">
-    <%= turbo_stream_from @organisation %>
-    <%= render partial: "servers/problem_server", collection: @organisation.servers_with_immediate_problem, as: :server, locals: { organisation: @organisation } %>
-  </div>
+    <h1 class="text-xl font-bold">Servers with immediate problems</h1>
+    <%= turbo_stream_from @organisation.id.to_s + "-problem" %>
+    <div id="problem_servers" class="flex flex-wrap py-4 pl-4 bg-red-200 rounded-lg gap-4">
+      <%= turbo_stream_from @organisation %>
+      <%= render partial: "servers/problem_server", collection: @organisation.servers_with_immediate_problem, as: :server, locals: { organisation: @organisation } %>
+    </div>
 </div>
