--- a/app/views/organisations/index.html.erb
+++ b/app/views/organisations/index.html.erb
@@ -5,6 +5,7 @@
   <% if alert.present? %>
     <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
   <% end %>
+  <%= turbo_stream_from @organisation %>
 
   <div class="flex items-center justify-between">
     <h1 class="text-4xl font-bold">Organisations</h1>
