--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -54,7 +54,7 @@
         <p class="px-4 py-1 font-normal rounded">Signed in as <%= current_user.email %></p>
         <hr>
         <%# TODO: current_organisation triggers if on the new page %>
-        <% if !current_organisation.new_record? %>
+        <% if current_organisation != nil || current_organisation.new_record? %>
           <p><%= current_organisation.name %></p>
           <%= link_to organisation_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
             <div class="flex">
@@ -78,6 +78,14 @@
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
 </svg>
               <p class="pl-2">Recent problems</p>
+            </div>
+          <% end %>
+          <%= link_to organisation_organisations_users_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>
+              <p class="pl-2">Members</p>
             </div>
           <% end %>
         <% end %>
