Add healthy servers page and refactor server header turbo stuff

--- a/app/views/organisations/problems.html.erb
+++ b/app/views/organisations/problems.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_frame_tag 'problems' do %>
 <div class="w-full mx-auto justify-left md:w-2/3">
   <%= render "problems", organisation: @organisation %>
 </div>
+<% end %>
