--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -10,7 +10,7 @@
 
 
     <%= render @organisation %>
-    <p class="text-xl font-bold">Consider having section for good status servers - Would fix duplicate server-header-id issue</p>
+    
     <%= link_to 'Edit this organisation', edit_organisation_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <div class="inline-block ml-2">
       <%= button_to 'Destroy this organisation', organisation_path(@organisation), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
@@ -20,8 +20,5 @@
   </div>
     <%= render "problems", organisation: @organisation %>
     <%= render "warnings", organisation: @organisation %>
-
-  <div class="flex flex-wrap py-4 pl-4 rounded-lg gap-4">
-    <%= render @organisation.servers, organisation: @organisation %>
-  </div>
+    <%= render "healthy_servers", organisation: @organisation %>
 </div>
