--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -53,7 +53,6 @@
         <% end %>
         <p class="px-4 py-1 font-normal rounded">Signed in as <%= current_user.email %></p>
         <hr>
-        <%# TODO: current_organisation triggers if on the new page %>
         <% if current_organisation != nil && !current_organisation.new_record? %>
           <p><%= current_organisation.name %></p>
           <%= link_to organisation_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
@@ -78,6 +77,14 @@
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
 </svg>
               <p class="pl-2">Recent problems</p>
+            </div>
+          <% end %>
+          <%= link_to organisation_healthy_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              <p class="pl-2">Healthy servers</p>
             </div>
           <% end %>
           <%= link_to organisation_organisations_users_path(@organisation), class: "px-4 py-1 hover:bg-red-400 rounded transition duration-200" do %>
