--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -1,22 +1,28 @@
-<div class="w-full mx-auto md:w-2/3">
+<div class="w-full mx-auto md:w-2/3" data-controller="chart" >
   <div class="mx-auto">
     <% if notice.present? %>
-      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
-    <% end %>
-    <% if alert.present? %>
-      <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
-    <% end %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+  <% end %>
+  <% if alert.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
+  <% end %>
+  <p>Possible there could be a bug with the heartbeats turbo stream. Something about a missing source maybe since it's on the heartbeat entries?</p>
 
-    <%= render @server, organisation: @organisation %>
 
-    <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, @server), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to 'Destroy this server', organisation_server_path(@organisation, @server), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
-    <%= link_to 'Back to organisation', organisation_path(@organisation), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <p>Add colours to heartbeats. Could use helper to decide bg-x-200 colour</p>
+
+  <%= render @server, organisation: @organisation %>
+
+  <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, @server), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <div class="inline-block ml-2">
+    <%= button_to 'Destroy this server', organisation_server_path(@organisation, @server), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
   </div>
+  <%= link_to 'Back to organisation', organisation_path(@organisation), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  </div>
+  <div data-chart-target="chart" class="w-full h-96"></div>
   <h3 class="text-lg font-bold">Requests</h3>
   <div id="heartbeats">
     <%= render @server.heartbeats.order(id: :desc), server: @server, organisation: @organisation %>
   </div>
+</div>
 </div>
