--- a/app/views/heartbeats/_heartbeat.html.erb
+++ b/app/views/heartbeats/_heartbeat.html.erb
@@ -1,6 +1,6 @@
 <% round_trip_time = nil %>
 <% round_trip_time = heartbeat.response_time - heartbeat.request_time if heartbeat.response_time != nil %>
-<%= tag.div id: dom_id(heartbeat), data: { chart_target: "heartbeat", request_time: heartbeat.request_time, response_time: round_trip_time } do %>
+<%= tag.div id: dom_id(heartbeat), data: { chart_target: "heartbeat", request_time: heartbeat.request_time, response_time: round_trip_time }, class: heartbeat_colour(heartbeat) + " rounded-lg px-4 py-4" do %>
   <p><%= heartbeat.status_code %></p>
   <p><%= heartbeat.request_time %></p>
   <% if heartbeat.status_message %>
@@ -14,7 +14,6 @@
     <% # TODO: Better solution for action_name check since turbo stream is coming in as not a show action, but rendering on server page does on load %>
     <% if action_name != "xxx" %>
       <%= link_to "Show this heartbeat", organisation_server_heartbeat_path(organisation, server, heartbeat), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      <hr class="mt-6">
     <% end %>
   <% end %>
 <% end %>
