--- a/app/views/organisations/_organisation.html.erb
+++ b/app/views/organisations/_organisation.html.erb
@@ -1,6 +1,5 @@
 <div id="<%= dom_id organisation %>">
-  <p class="my-5">
-  <strong class="block mb-1 font-medium">Name:</strong>
+  <p class="my-5 text-2xl font-bold">
   <%= organisation.name %>
   </p>
 
