--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -11,7 +11,7 @@
 
     <%= render @organisation %>
     
-    <div class="flex gap-4 flex-wrap">
+    <div class="flex flex-wrap gap-4">
       <%= link_to 'Edit this organisation', edit_organisation_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       <%= button_to 'Destroy this organisation', organisation_path(@organisation), method: :delete, class: "inline-block mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
       <%= link_to 'Back to organisations', organisations_path, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
