--- a/app/views/servers/_server_header.html.erb
+++ b/app/views/servers/_server_header.html.erb
@@ -6,11 +6,12 @@
   <% status_indicator_color = "bg-red-500" %>
 <% end %>
 
-<div id="<%= dom_id(server) + "-server-header" %>"class="">
+<div id="<%= dom_id(server) + "-server-header" %>" class="">
   <%= turbo_stream_from server %>
-  <p class="inline my-5">
-  <strong class="block mb-1 font-medium">Hostname:</strong>
-  <%= server.protocol %><%= server.hostname %>
-  </p>
-  <div class="w-4 h-4 <%= status_indicator_color %> rounded-full border border-black"></div>
+  <div class="flex pb-2 gap-4">
+    <div class="w-5 h-5 <%= status_indicator_color %> rounded-full border border-black"></div>
+    <p class="">
+    <%= server.protocol %><%= server.hostname %>
+    </p>
+  </div>
 </div>
