--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div data-chart-target="chart" class="w-full h-96"></div>
 
-  <h3 class="text-lg font-bold">Requests</h3>
+  <h3 class="py-4 text-lg font-bold">Requests</h3>
   <div id="heartbeats" class="flex flex-col gap-4">
     <%= render @server.heartbeats.order(id: :desc), server: @server, organisation: @organisation %>
   </div>
