--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>Change your password</h2>
+<div class="w-full mx-auto justify-left md:w-2/3">
+<h2 class="pb-4 text-2xl font-bold">Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { data: {turbo: false}, method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -18,8 +19,9 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= render "devise/shared/links" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
