--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full mx-auto justify-left md:w-2/3">
-  <h2>Sign up</h2>
+  <h2 class="pb-4 text-2xl font-bold">Sign up</h2>
   <% if notice.present? %>
     <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
   <% end %>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="py-2 actions">
-      <%= f.submit "Sign up", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+      <%= f.submit "Sign up", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
       <%= render "devise/shared/links" %>
     </div>
   <% end %>
