--- a/app/views/organisations_users/index.html.erb
+++ b/app/views/organisations_users/index.html.erb
@@ -7,7 +7,7 @@
   <% end %>
   <%= turbo_stream_from @organisation %>
 
-  <div class="flex items-center justify-between">
+  <div class="flex flex-wrap items-center justify-between">
     <h1 class="text-4xl font-bold">Organisations users</h1>
     <%= link_to 'New organisations user', new_organisation_organisations_user_path(@organisation), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
