--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,4 +1,6 @@
 <div class="w-full mx-auto justify-left md:w-2/3">
   <h1 class="py-4 text-4xl font-bold">Your account</h1>
   <%= render @user %>
+
+  <%= link_to 'Change password', edit_user_password_path(@user) %>
 </div>
