Add back to org button for healthy/problem pages

--- a/app/views/organisations/healthy.html.erb
+++ b/app/views/organisations/healthy.html.erb
@@ -1,3 +1,4 @@
 <div class="w-full mx-auto justify-left md:w-2/3">
   <%= render "healthy_servers", organisation: @organisation %>
+  <%= link_to "Back to organisation", organisation_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"  %>
 </div>
