--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -8,6 +8,9 @@
   <% end %>
 
   <%= render partial: "server_header", locals: { server: @server,  organisation: @organisation } %>
+  <p class="text-sm break-all">
+  <%= @server.protocol %><%= @server.hostname %>
+  </p>
 
   <div class="flex flex-wrap gap-2">
     <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, @server), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
